Fix presentation receiver window location bar in chromeos

Chromebooks have an additional hardware button that allows them to
toggle windows fullscreen.  This bypasses the ExclusiveAccessManager,
which is only tied to the normal platform shortcut (e.g. F11).  This
change adds a window observer for Chrome OS to watch for fullscreen
changes outside the ExclusiveAccessManager.

Bug: 809682
Change-Id: I021815dd4aff07bc1b389286d24d85380f380e0e